--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         }
         .hero {
             /* Thay thế bằng ảnh nền phù hợp cho THPT Lương Đắc Bằng */
-            background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('https://placehold.co/1920x1080/4f5b66/ffffff?text=Anh+Nen+Truong+LDB'); 
+            background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('https://www.facebook.com/photo/?fbid=202095655999378&set=a.112667041608907&__cft__[0]=AZUw2mQTEJeTTKPmU86LPv6KnT1wWwrX0kMFBh4A_7GVMDGY9lfk7Pcpe7zyzPUHMABuPMcKMEWH6Z7GJNWtFY2DYiZsL95P9wgD0OgnmGDuJ_q40rRI293_14jEY9WPlmjdGs-L6FKHegm7SQ_B4ChdlkduUPqPqFR3os3-zk5bK-QBd0XOoB05oWEmpkggmDY&__tn__=EH-R'); 
             background-size: cover;
             background-position: center;
             height: 100vh;
@@ -127,13 +127,13 @@
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
                     <!-- Placeholder cho hình ảnh -->
                     <div class="bg-gray-700 h-64 rounded-xl shadow-lg overflow-hidden flex items-center justify-center text-center text-white p-4 transition duration-300 hover:scale-105">
-                        <p class="font-bold text-lg">Ảnh Trường THPT Lương Đắc Bằng</p>
+                        <p class="https://www.facebook.com/photo/?fbid=843398464928209&set=a.265066059428122&__cft__[0]=AZUVwS6h7YHQnXIaPlFIqkn0TsSrYI7JM3gKfyXDY8HutdoKfn-NODzO86OyH2jDKKDvazDLHQPZzFfAKStsc2VmENdK811xOKB3IhIP2TCgdefKn2Q2w6yQ7CKhczSYPndXGIVpzSMMJ24M4HMJayaO-1Svp8nkEl3V71-orH6_wELACwzRn-qeeRLEi9Hhw7U&__tn__=EH-R">Ảnh Trường THPT Lương Đắc Bằng</p>
                     </div>
                     <div class="bg-gray-700 h-64 rounded-xl shadow-lg overflow-hidden flex items-center justify-center text-center text-white p-4 transition duration-300 hover:scale-105">
-                        <p class="font-bold text-lg">Hoạt Động Dạy và Học</p>
+                        <p class="https://scontent.fhan2-4.fna.fbcdn.net/v/t39.30808-6/544795176_816488417619214_7288318762565708173_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeEiuewymCm_5A6js1Ir22xR21QzF3IELG_bVDMXcgQsb7sQ-w66H5_H4SIBosRN7TnLgg45KT8ofN78M_XuZP-_&_nc_ohc=IhSBcR4S7WAQ7kNvwEctubP&_nc_oc=AdkXO3gFtxiIVtBd67CE8UhtP5WV16Ug7TJHoiLxV7PcQBFiRZgrvabSUz2S1C9LpkMqjNaj6AJTLN2rmW6XjlTU&_nc_zt=23&_nc_ht=scontent.fhan2-4.fna&_nc_gid=9qgc1QTg4BQSOTHEG_Vv-A&oh=00_Afih2MNNX9afn569HaXJuGf8yiWAooyQ6xjkezHAnpbP7Q&oe=6927A441">Hoạt Động Dạy và Học</p>
                     </div>
                     <div class="bg-gray-700 h-64 rounded-xl shadow-lg overflow-hidden flex items-center justify-center text-center text-white p-4 transition duration-300 hover:scale-105">
-                        <p class="font-bold text-lg">Văn Nghệ Chào Mừng 20/11</p>
+                        <p class="https://scontent.fhan2-5.fna.fbcdn.net/v/t39.30808-6/586558156_880487844552604_580344962991444787_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeE0OM_DHt39zd7Bj966xygi-KyinM_HpFf4rKKcz8ekV0ZArCSfL-rrnG62_R56o0HakzOEHgWmZdaozEENz58R&_nc_ohc=W1CmQwVSP90Q7kNvwFAvA3j&_nc_oc=AdmOJV6vYKrN0Lpg6HyXHJ8Lsq4dCK_grNOfjC1YmsErF2lfFM3Ohphf3vd-rD3V4M6CAFqFImVEtgiTbHK2qQxs&_nc_zt=23&_nc_ht=scontent.fhan2-5.fna&_nc_gid=bgfl6CCEAELT-LyGp8PLBg&oh=00_AfjNEdu8456Qa8zMDQ-XMKWyebFVM4qyANeUZBniUHiaZA&oe=6927AF65">Văn Nghệ Chào Mừng 20/11</p>
                     </div>
                     <!-- Cần thay thế các div trên bằng thẻ <img> với ảnh thật -->
                 </div>
@@ -165,8 +165,8 @@
     <!-- Footer -->
     <footer class="bg-primary text-white py-6">
         <div class="container mx-auto px-4 text-center">
-            <p>&copy; 2025 - Dự Án Tri Ân Thầy Cô THPT Lương Đắc Bằng.</p>
-            <p class="text-sm mt-1">Design & Code: [Tên Người Thực Hiện/Tập Thể Lớp]</p>
+            <p>&copy; 2025 - Tập thể A6 K61.</p>
+            <p class="text-sm mt-1">Design & Code: Lê Thắng Lợi]</p>
         </div>
     </footer>
 
