--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         }
         .hero {
             /* Thay thế bằng ảnh nền phù hợp cho THPT Lương Đắc Bằng */
-            background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('https://www.facebook.com/photo/?fbid=202095655999378&set=a.112667041608907&__cft__[0]=AZUw2mQTEJeTTKPmU86LPv6KnT1wWwrX0kMFBh4A_7GVMDGY9lfk7Pcpe7zyzPUHMABuPMcKMEWH6Z7GJNWtFY2DYiZsL95P9wgD0OgnmGDuJ_q40rRI293_14jEY9WPlmjdGs-L6FKHegm7SQ_B4ChdlkduUPqPqFR3os3-zk5bK-QBd0XOoB05oWEmpkggmDY&__tn__=EH-R'); 
+            background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('blob:https://www.facebook.com/a0436f6b-1db1-4bcb-8b2d-f983fe601b06'); 
             background-size: cover;
             background-position: center;
             height: 100vh;
