--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         }
         .hero {
             /* Thay thế bằng ảnh nền phù hợp cho THPT Lương Đắc Bằng */
-            background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('blob:https://www.facebook.com/a0436f6b-1db1-4bcb-8b2d-f983fe601b06'); 
+            background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('https://github.com/le180237-afk/20-11-tri-an-thay-co/blob/main/vanngnw.jpg?raw=true'); 
             background-size: cover;
             background-position: center;
             height: 100vh;
