--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             /* THAY THẾ LINK ẢNH DƯỚI ĐÂY:
                Sử dụng link ảnh trực tiếp (kết thúc bằng .jpg, .png,...)
             */
-            background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('https://placehold.co/1920x1080/4f5b66/ffffff?text=Anh+Nen+Truong+LDB'); 
+            background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('https://github.com/le180237-afk/20-11-tri-an-thay-co/blob/main/anh%20thpt%20luong%20dac%20bang.jpg?raw=true'); 
             background-size: cover;
             background-position: center;
             height: 100vh;
@@ -157,7 +157,7 @@
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
                     <!-- Placeholder cho hình ảnh -->
                     <div class="bg-gray-700 h-64 rounded-xl shadow-lg overflow-hidden flex items-center justify-center text-center text-white p-4 transition duration-300 hover:scale-105" data-aos="zoom-in">
-                        <p class="font-bold text-lg">Ảnh Trường THPT Lương Đắc Bằng</p>
+                       <img src="LINK_ANH_CUA_BAN" alt="Ảnh Trường THPT Lương Đắc Bằng" class="w-full h-full object-cover transform transition duration-500 hover:scale-110">
                     </div>
                     <div class="bg-gray-700 h-64 rounded-xl shadow-lg overflow-hidden flex items-center justify-center text-center text-white p-4 transition duration-300 hover:scale-105" data-aos="zoom-in" data-aos-delay="150">
                         <p class="font-bold text-lg">Hoạt Động Dạy và Học</p>
