--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             /* THAY THẾ LINK ẢNH DƯỚI ĐÂY:
                Sử dụng link ảnh trực tiếp (kết thúc bằng .jpg, .png,...)
             */
-            background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('https://placehold.co/1920x1080/4f5b66/ffffff?text=Anh+Nen+Truong+LDB'); 
+            background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('https://github.com/le180237-afk/20-11-tri-an-thay-co/blob/main/anh%20thpt%20luong%20dac%20bang.jpg?raw=true'); 
             background-size: cover;
             background-position: center;
             height: 100vh;
@@ -158,13 +158,13 @@
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
                     <!-- Placeholder cho hình ảnh -->
                     <div class="bg-gray-700 h-64 rounded-xl shadow-lg overflow-hidden flex items-center justify-center text-center text-white p-4 transition duration-300 hover:scale-105" data-aos="zoom-in">
-                        <p class="font-bold text-lg">Ảnh Trường THPT Lương Đắc Bằng</p>
+                       <img src="https://github.com/le180237-afk/20-11-tri-an-thay-co/blob/main/anh%20thpt%20luong%20dac%20bang.jpg?raw=true" alt="Ảnh Trường THPT Lương Đắc Bằng" class="w-full h-full object-cover transform transition duration-500 hover:scale-110">
                     </div>
                     <div class="bg-gray-700 h-64 rounded-xl shadow-lg overflow-hidden flex items-center justify-center text-center text-white p-4 transition duration-300 hover:scale-105" data-aos="zoom-in" data-aos-delay="150">
-                        <p class="font-bold text-lg">Hoạt Động Dạy và Học</p>
+                        <img src="https://github.com/le180237-afk/20-11-tri-an-thay-co/blob/main/thay%20bao.jpg?raw=true" alt="Ảnh Trường THPT Lương Đắc Bằng" class="w-full h-full object-cover transform transition duration-500 hover:scale-110">
                     </div>
                     <div class="bg-gray-700 h-64 rounded-xl shadow-lg overflow-hidden flex items-center justify-center text-center text-white p-4 transition duration-300 hover:scale-105" data-aos="zoom-in" data-aos-delay="300">
-                        <p class="font-bold text-lg">Văn Nghệ Chào Mừng 20/11</p>
+                        <img src="https://github.com/le180237-afk/20-11-tri-an-thay-co/blob/main/vanngnw.jpg?raw=true" alt="Ảnh Trường THPT Lương Đắc Bằng" class="w-full h-full object-cover transform transition duration-500 hover:scale-110">
                     </div>
                     <!-- Cần thay thế các div trên bằng thẻ <img> với ảnh thật -->
                 </div>
@@ -234,11 +234,11 @@
                     </div>
 
                     <!-- THAY THẾ TÊN VÀ LỚP CỦA BẠN VÀO ĐÂY -->
-                    <p class="text-2xl font-bold text-gray-800 mb-2">Tên của Người Phát Triển</p>
-                    <p class="text-lg text-gray-600 mb-4">Học sinh lớp [Tên Lớp] | THPT Lương Đắc Bằng</p>
+                    <p class="text-2xl font-bold text-gray-800 mb-2">Lê Thắng Lợi</p>
+                    <p class="text-lg text-gray-600 mb-4">Học sinh lớp A6 K61 | THPT Lương Đắc Bằng</p>
 
                     <!-- Link Facebook - THAY THẾ BẰNG LINK CỦA BẠN -->
-                    <a href="https://facebook.com/your-facebook-link" target="_blank" 
+                    <a href="https://www.facebook.com/loitrumhust.111" target="_blank" 
                        class="inline-flex items-center text-primary hover:text-red-700 font-semibold transition duration-300 hover:underline">
                         <svg class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path d="M22 12c0-5.52-4.48-10-10-10S2 6.48 2 12c0 4.84 3.44 8.87 8 9.8V15H8v-3h2V9.5C10 7.5 11.5 6 13.5 6H16v3h-2c-.88 0-1.5.5-1.5 1.5V12h3l-.5 3h-2.5v6.8c4.56-.93 8-4.96 8-9.8z"></path></svg>
                         Kết nối với Dev
