--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         <!-- Thông Tin Người Phát Triển (Developer Info) - PHẦN MỚI ĐƯỢC THÊM VÀO -->
         <section id="developer-info" class="py-16 bg-light-bg">
             <div class="container mx-auto px-4 max-w-2xl text-center" data-aos="fade-up">
-                <h3 class="font-serif-display text-4xl font-bold text-primary mb-8">🛠 Người Phát Triển Dự Án</h3>
+                <h3 class="font-serif-display text-4xl font-bold text-primary mb-8">🛠 Nhà Phát Triển</h3>
                 
                 <div class="flex flex-col items-center p-6 bg-white rounded-xl shadow-2xl border-b-4 border-secondary">
                     <!-- Placeholder Ảnh Đại Diện -->
