--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                     <!-- Placeholder Ảnh Đại Diện -->
                     <div class="w-32 h-32 bg-gray-300 rounded-full mb-4 shadow-lg flex items-center justify-center border-4 border-secondary overflow-hidden">
                         <!-- THAY THẾ BẰNG ẢNH ĐẠI DIỆN CỦA BẠN (1:1) -->
-                        <svg class="w-16 h-16 text-gray-600" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10 9a3 3 0 100-6 3 3 0 000 6zm-7 9a7 7 0 1114 0H3z" clip-rule="evenodd"></path></svg>
+                        <svg class="w-16 h-16 text-gray-600" fill="currentColor" viewBox="0 0 20 20" xmlns="https://github.com/le180237-afk/20-11-tri-an-thay-co/blob/main/%E1%BA%A3nh%20l%E1%BB%A3i.jpg?raw=true"><path fill-rule="evenodd" d="M10 9a3 3 0 100-6 3 3 0 000 6zm-7 9a7 7 0 1114 0H3z" clip-rule="evenodd"></path></svg>
                     </div>
 
                     <!-- THAY THẾ TÊN VÀ LỚP CỦA BẠN VÀO ĐÂY -->
@@ -241,7 +241,7 @@
                     <a href="https://www.facebook.com/loitrumhust.111" target="_blank" 
                        class="inline-flex items-center text-primary hover:text-red-700 font-semibold transition duration-300 hover:underline">
                         <svg class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path d="M22 12c0-5.52-4.48-10-10-10S2 6.48 2 12c0 4.84 3.44 8.87 8 9.8V15H8v-3h2V9.5C10 7.5 11.5 6 13.5 6H16v3h-2c-.88 0-1.5.5-1.5 1.5V12h3l-.5 3h-2.5v6.8c4.56-.93 8-4.96 8-9.8z"></path></svg>
-                        Kết nối với Dev
+                        Kết nối với Lợi Ở Đây Nek =)))
                     </a>
                 </div>
             </div>
@@ -254,7 +254,7 @@
         <div class="container mx-auto px-4 text-center">
             <p>&copy; 2025 - Dự Án Tri Ân Thầy Cô THPT Lương Đắc Bằng.</p>
             <!-- Cập nhật để liên kết đến phần thông tin người phát triển -->
-            <p class="text-sm mt-1">Design & Code: Xem chi tiết <a href="#developer-info" class="text-secondary font-bold hover:underline">Người Phát Triển</a></p>
+            <p class="text-sm mt-1">Design & Code: Xem chi tiết <a href="#developer-info" class="text-secondary font-bold hover:underline">NhàNhà Phát Triển</a></p>
         </div>
     </footer>
 
