--- a/index.html
+++ b/index.html
@@ -230,7 +230,9 @@
                     <!-- Placeholder Ảnh Đại Diện -->
                     <div class="w-32 h-32 bg-gray-300 rounded-full mb-4 shadow-lg flex items-center justify-center border-4 border-secondary overflow-hidden">
                         <!-- THAY THẾ BẰNG ẢNH ĐẠI DIỆN CỦA BẠN (1:1) -->
-                        <svg class="w-16 h-16 text-gray-600" fill="currentColor" viewBox="0 0 20 20" xmlns="https://github.com/le180237-afk/20-11-tri-an-thay-co/blob/main/%E1%BA%A3nh%20l%E1%BB%A3i.jpg?raw=true"><path fill-rule="evenodd" d="M10 9a3 3 0 100-6 3 3 0 000 6zm-7 9a7 7 0 1114 0H3z" clip-rule="evenodd"></path></svg>
+                       <img src="LINK_ANH_DAI_DIEN_CUA_BAN" alt="Ảnh Đại Diện Developer" class="w-full h-full object-cover">
+
+Sau khi sửa, ảnh đại diện của bạn sẽ xuất hiện trong vòng tròn màu vàng!
                     </div>
 
                     <!-- THAY THẾ TÊN VÀ LỚP CỦA BẠN VÀO ĐÂY -->
@@ -254,7 +256,7 @@
         <div class="container mx-auto px-4 text-center">
             <p>&copy; 2025 - Dự Án Tri Ân Thầy Cô THPT Lương Đắc Bằng.</p>
             <!-- Cập nhật để liên kết đến phần thông tin người phát triển -->
-            <p class="text-sm mt-1">Design & Code: Xem chi tiết <a href="#developer-info" class="text-secondary font-bold hover:underline">NhàNhà Phát Triển</a></p>
+            <p class="text-sm mt-1">Design & Code: Xem chi tiết <a href="#developer-info" class="text-secondary font-bold hover:underline">Nhà Phát Triển</a></p>
         </div>
     </footer>
 
