--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                     <!-- Placeholder Ảnh Đại Diện -->
                     <div class="w-32 h-32 bg-gray-300 rounded-full mb-4 shadow-lg flex items-center justify-center border-4 border-secondary overflow-hidden">
                         <!-- THAY THẾ BẰNG ẢNH ĐẠI DIỆN CỦA BẠN (1:1) -->
-                       <img src="LINK_ANH_DAI_DIEN_CUA_BAN" alt="Ảnh Đại Diện Developer" class="w-full h-full object-cover">
+                       <img src="https://github.com/le180237-afk/20-11-tri-an-thay-co/blob/main/%E1%BA%A3nh%20l%E1%BB%A3i.jpg?raw=true" alt="Ảnh Đại Diện Developer" class="w-full h-full object-cover">
 
 Sau khi sửa, ảnh đại diện của bạn sẽ xuất hiện trong vòng tròn màu vàng!
                     </div>
