--- a/index.html
+++ b/index.html
@@ -205,16 +205,16 @@
                 <div id="messages-list" class="space-y-6">
                     <!-- Lời chúc 1 -->
                     <div class="message-card bg-light-bg p-6 rounded-xl shadow-lg border-l-4 border-primary transition duration-300 hover:shadow-2xl" data-aos="fade-up">
-                        <h4 class="font-serif-display text-xl text-primary mb-2">Gửi Cô [Tên Cô giáo] - Chủ nhiệm KXX</h4>
-                        <p class="text-gray-700 italic">"Chúng em cảm ơn Cô đã không chỉ là người dẫn đường mà còn là người mẹ thứ hai. Chúc Cô 20/11 tràn đầy niềm vui, hạnh phúc và luôn giữ được nụ cười rạng rỡ!"</p>
-                        <span class="block text-sm text-gray-500 mt-4 text-right">- Tập thể lớp 12A3 - Khóa 2023-2025</span>
+                        <h4 class="font-serif-display text-xl text-primary mb-2">Gửi Thầy Lê Vĩ Nhân - Chủ nhiệm A6 K61</h4>
+                        <p class="text-gray-700 italic">Em cảm ơn thầy và biết ơn sâu sắc khoảng thời gian cấp3, tuy có đôi lúc em hơi nghịch ngợm nhưng thầy vẫn bao dung tha thứ và nhắc nhở em để em có thể thay đổi theo hướng tích cực nhất. Em cảm ơn thầy, chúc Thầy 20/11 hạnh phúc!!!"</p>
+                        <span class="block text-sm text-gray-500 mt-4 text-right">- Em Lê Thắng Lợi</span>
                     </div>
                     
                     <!-- Lời chúc 2 -->
                     <div class="message-card bg-light-bg p-6 rounded-xl shadow-lg border-l-4 border-secondary transition duration-300 hover:shadow-2xl" data-aos="fade-up" data-aos-delay="100">
-                        <h4 class="font-serif-display text-xl text-primary mb-2">Gửi Thầy [Tên Thầy giáo] - Tổ Trưởng Tổ Toán</h4>
-                        <p class="text-gray-700 italic">"Những bài giảng về lượng giác và giải tích của Thầy mãi là những ký ức đáng nhớ. Kính chúc Thầy sức khỏe dồi dào, tiếp tục cống hiến cho sự nghiệp trồng người!"</p>
-                        <span class="block text-sm text-gray-500 mt-4 text-right">- Học sinh cũ, Khóa 2017-2020</span>
+                        <h4 class="font-serif-display text-xl text-primary mb-2">Gửi Thầy Nguyễn Văn Bảo - Trùm Tổ Toán</h4>
+                        <p class="text-gray-700 italic">"Những bài giảng về lượng giác và tích phân của Thầy mãi là những ký ức đáng nhớ. Kính chúc Thầy sức khỏe dồi dào, tiếp tục cống hiến cho sự nghiệp trồng người!"</p>
+                        <span class="block text-sm text-gray-500 mt-4 text-right">- Tập thể lớp 12A6 - Khóa 2022-2025</span>
                     </div>
                     <!-- Các lời chúc mới sẽ được thêm vào đây -->
                 </div>
