--- a/index.html
+++ b/index.html
@@ -166,6 +166,18 @@
                     <div class="bg-gray-700 h-64 rounded-xl shadow-lg overflow-hidden flex items-center justify-center text-center text-white p-4 transition duration-300 hover:scale-105" data-aos="zoom-in" data-aos-delay="300">
                         <img src="https://github.com/le180237-afk/20-11-tri-an-thay-co/blob/main/vanngnw.jpg?raw=true" alt="Ảnh Trường THPT Lương Đắc Bằng" class="w-full h-full object-cover transform transition duration-500 hover:scale-110">
                     </div>
+                    <div class="bg-gray-700 h-64 rounded-xl shadow-lg overflow-hidden flex items-center justify-center text-center text-white p-4 transition duration-300 hover:scale-105" data-aos="zoom-in" data-aos-delay="300">
+                        <img src="https://github.com/le180237-afk/20-11-tri-an-thay-co/blob/main/vanngnw.jpg?raw=true" alt="Ảnh Trường THPT Lương Đắc Bằng" class="w-full h-full object-cover transform transition duration-500 hover:scale-110">
+                    </div>
+                    <div class="bg-gray-700 h-64 rounded-xl shadow-lg overflow-hidden flex items-center justify-center text-center text-white p-4 transition duration-300 hover:scale-105" data-aos="zoom-in" data-aos-delay="300">
+                        <img src="https://github.com/le180237-afk/20-11-tri-an-thay-co/blob/main/vanngnw.jpg?raw=true" alt="Ảnh Trường THPT Lương Đắc Bằng" class="w-full h-full object-cover transform transition duration-500 hover:scale-110">
+                    </div>
+                    <div class="bg-gray-700 h-64 rounded-xl shadow-lg overflow-hidden flex items-center justify-center text-center text-white p-4 transition duration-300 hover:scale-105" data-aos="zoom-in" data-aos-delay="300">
+                        <img src="https://github.com/le180237-afk/20-11-tri-an-thay-co/blob/main/vanngnw.jpg?raw=true" alt="Ảnh Trường THPT Lương Đắc Bằng" class="w-full h-full object-cover transform transition duration-500 hover:scale-110">
+                    </div>
+                    <div class="bg-gray-700 h-64 rounded-xl shadow-lg overflow-hidden flex items-center justify-center text-center text-white p-4 transition duration-300 hover:scale-105" data-aos="zoom-in" data-aos-delay="300">
+                        <img src="https://github.com/le180237-afk/20-11-tri-an-thay-co/blob/main/vanngnw.jpg?raw=true" alt="Ảnh Trường THPT Lương Đắc Bằng" class="w-full h-full object-cover transform transition duration-500 hover:scale-110">
+                    </div>
                     <!-- Cần thay thế các div trên bằng thẻ <img> với ảnh thật -->
                 </div>
             </div>
