--- a/index.html
+++ b/index.html
@@ -161,19 +161,19 @@
                        <img src="https://github.com/le180237-afk/20-11-tri-an-thay-co/blob/main/anh%201.jpg?raw=true" alt="Ảnh Trường THPT Lương Đắc Bằng" class="w-full h-full object-cover transform transition duration-500 hover:scale-110">
                     </div>
                     <div class="bg-gray-700 h-64 rounded-xl shadow-lg overflow-hidden flex items-center justify-center text-center text-white p-4 transition duration-300 hover:scale-105" data-aos="zoom-in" data-aos-delay="150">
-                        <img src="https://github.com/le180237-afk/20-11-tri-an-thay-co/blob/main/thay%20bao.jpg?raw=true" alt="Ảnh Trường THPT Lương Đắc Bằng" class="w-full h-full object-cover transform transition duration-500 hover:scale-110">
+                        <img src="https://github.com/le180237-afk/20-11-tri-an-thay-co/blob/main/anh1.jpg?raw=true" alt="Ảnh Trường THPT Lương Đắc Bằng" class="w-full h-full object-cover transform transition duration-500 hover:scale-110">
                     </div>
                     <div class="bg-gray-700 h-64 rounded-xl shadow-lg overflow-hidden flex items-center justify-center text-center text-white p-4 transition duration-300 hover:scale-105" data-aos="zoom-in" data-aos-delay="300">
-                        <img src="https://github.com/le180237-afk/20-11-tri-an-thay-co/blob/main/vanngnw.jpg?raw=true" alt="Ảnh Trường THPT Lương Đắc Bằng" class="w-full h-full object-cover transform transition duration-500 hover:scale-110">
+                        <img src="https://github.com/le180237-afk/20-11-tri-an-thay-co/blob/main/anh2.jpg?raw=true" alt="Ảnh Trường THPT Lương Đắc Bằng" class="w-full h-full object-cover transform transition duration-500 hover:scale-110">
                     </div>
                     <div class="bg-gray-700 h-64 rounded-xl shadow-lg overflow-hidden flex items-center justify-center text-center text-white p-4 transition duration-300 hover:scale-105" data-aos="zoom-in" data-aos-delay="300">
-                        <img src="https://github.com/le180237-afk/20-11-tri-an-thay-co/blob/main/vanngnw.jpg?raw=true" alt="Ảnh Trường THPT Lương Đắc Bằng" class="w-full h-full object-cover transform transition duration-500 hover:scale-110">
+                        <img src="https://github.com/le180237-afk/20-11-tri-an-thay-co/blob/main/anh3?raw=true" alt="Ảnh Trường THPT Lương Đắc Bằng" class="w-full h-full object-cover transform transition duration-500 hover:scale-110">
                     </div>
                     <div class="bg-gray-700 h-64 rounded-xl shadow-lg overflow-hidden flex items-center justify-center text-center text-white p-4 transition duration-300 hover:scale-105" data-aos="zoom-in" data-aos-delay="300">
-                        <img src="https://github.com/le180237-afk/20-11-tri-an-thay-co/blob/main/vanngnw.jpg?raw=true" alt="Ảnh Trường THPT Lương Đắc Bằng" class="w-full h-full object-cover transform transition duration-500 hover:scale-110">
+                        <img src="https://github.com/le180237-afk/20-11-tri-an-thay-co/blob/main/anh4.jpg?raw=true" alt="Ảnh Trường THPT Lương Đắc Bằng" class="w-full h-full object-cover transform transition duration-500 hover:scale-110">
                     </div>
                     <div class="bg-gray-700 h-64 rounded-xl shadow-lg overflow-hidden flex items-center justify-center text-center text-white p-4 transition duration-300 hover:scale-105" data-aos="zoom-in" data-aos-delay="300">
-                        <img src="https://github.com/le180237-afk/20-11-tri-an-thay-co/blob/main/vanngnw.jpg?raw=true" alt="Ảnh Trường THPT Lương Đắc Bằng" class="w-full h-full object-cover transform transition duration-500 hover:scale-110">
+                        <img src="https://github.com/le180237-afk/20-11-tri-an-thay-co/blob/main/anh5.jpg?raw=true" alt="Ảnh Trường THPT Lương Đắc Bằng" class="w-full h-full object-cover transform transition duration-500 hover:scale-110">
                     </div>
                     <div class="bg-gray-700 h-64 rounded-xl shadow-lg overflow-hidden flex items-center justify-center text-center text-white p-4 transition duration-300 hover:scale-105" data-aos="zoom-in" data-aos-delay="300">
                         <img src="https://github.com/le180237-afk/20-11-tri-an-thay-co/blob/main/vanngnw.jpg?raw=true" alt="Ảnh Trường THPT Lương Đắc Bằng" class="w-full h-full object-cover transform transition duration-500 hover:scale-110">
