--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 Tri Ân Người Lái Đò
             </h1>
             <h2 class="text-xl md:text-3xl text-white mb-6">
-                Kính Chúc Thầy Cô Trường THPT Lương Đắc Bằng
+                Tập thể A6-K61 Kính Chúc Thầy Cô Trường THPT Lương Đắc Bằng
             </h2>
             <p class="text-2xl md:text-4xl font-bold text-white mb-10 border-b-2 border-secondary inline-block pb-2">
                 Ngày Nhà Giáo Việt Nam 20 - 11
