--- a/index.html
+++ b/index.html
@@ -242,13 +242,18 @@
                         <p class="text-gray-700 italic">"Nhân dịp 20/11, em chúc thầy dồi dào sức khoẻ, luôn vui vẻ tích cực. Cảm ơn thầy đã bên cạnh chúng em trong khoảng thời gian đẹp nhất của tuổi trẻ. Chúc thầy mãi thành công trong sự nghiệp trồng người".</p>
                         <span class="block text-sm text-gray-500 mt-4 text-right">- Em Nguyễn Thành Dương</span>
                     </div>
-                    <!-- Lời chúc 1 duong dieu -->
+                    <!-- Lời chúc 2 duong dieu -->
                     <div class="message-card bg-light-bg p-6 rounded-xl shadow-lg border-l-4 border-primary transition duration-300 hover:shadow-2xl" data-aos="fade-up">
                         <h4 class="font-serif-display text-xl text-primary mb-2">Gửi Thầy Nguyễn Văn Bảo</h4>
                         <p class="text-gray-700 italic">"Thầy là một người luôn tâm huyết với từng bài giảng, luôn quan tâm tới từng học sinh của mình. Thầy đã truyền đạt cho chúng em những kiến thức không thể nào quý hơn mà bọn em sẽ luôn mang trong mình sau này. Chúc thầy 20/11 ngập tràn hạnh phúc, vui vẻ, sức khoẻ. Thầy mãi là người thầy của chúng em!".</p>
                         <span class="block text-sm text-gray-500 mt-4 text-right">- Em Nguyễn Thành Dương</span>
-                    </div>
-                    
+                    </div> 
+                     <!-- Lời chúc 3 duong dieu -->
+                    <div class="message-card bg-light-bg p-6 rounded-xl shadow-lg border-l-4 border-primary transition duration-300 hover:shadow-2xl" data-aos="fade-up">
+                        <h4 class="font-serif-display text-xl text-primary mb-2">Gửi Cô Lương Thị Hiền</h4>
+                        <p class="text-gray-700 italic">"Em cảm ơn cô vì những lời hay chữ đẹp, cảm ơn cô vì những bài học quý giá trong suốt quãng đời học cấp 3 của em. Cô vừa là giáo viên vừa như người mẹ thứ 2 luôn chăm lo từng li từng tí đến chúng em. Chúc cô ngày Nhà giáo VN ngập tràn ý nghĩa. Chúc cô mai sau có thêm những lứa học sinh tuyệt vời như chúng em. Chúng em yêu quý cô!".</p>
+                        <span class="block text-sm text-gray-500 mt-4 text-right">- Em Nguyễn Thành Dương</span>
+                    </div> 
                     
                     <!-- Lời chúc 2 -->
                     <div class="message-card bg-light-bg p-6 rounded-xl shadow-lg border-l-4 border-secondary transition duration-300 hover:shadow-2xl" data-aos="fade-up" data-aos-delay="100">
